--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:watch": "ts-node-dev --respawn src/index.ts",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
-    "build": "npm-run-all clean tsc",
+    "compile": "tsc",
+    "copy": "rsync -av src/server/secret/secret.json dist/secret/",
+    "build": "npm run compile && npm run copy",
     "start": "node .",
     "test": "jest"
   },
@@ -16,8 +18,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/express-serve-static-core": "^4.17.35",
     "@types/jest": "^27.4.1",
-    "@types/node": "^12.12.54",
+    "@types/node": "^12.20.55",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
     "request": "^2.88.2",
@@ -25,11 +29,12 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "^3.9.7"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@types/request": "^2.48.8",
     "@types/request-promise": "^4.1.48",
+    "express": "^4.18.2",
     "request-promise": "^4.2.6"
   },
   "jest": {
